src/objects/Legal_Doc__c.object
<CustomObject>
    <description>This is for legal to manage paperwork.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Legal Docs</relationshipLabel>
        <relationshipName>Legal_Docs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addendum_Status__c</fullName>
        <description>Pending addendum status goes here.</description>
        <label>Addendum Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <color>#DDDDDD</color>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <color>#FFFF66</color>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <color>#33FF33</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Agreement__c</fullName>
        <description>Base agreement goes here.</description>
        <label>Base Agreement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Legal notes go here.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SLA/EULA</fullName>
                </value>
                <value>
                    <fullName>Addendum</fullName>
                </value>
                <value>
                    <fullName>Master Terms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Legal Doc</label>
    <listViews>
        <fullName>All_Legal_Docs</fullName>
        <columns>Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Addendum_Status__c</columns>
        <columns>Base_Agreement__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Legal Docs</label>
    </listViews>
    <nameField>
        <displayFormat>LD-{000000}</displayFormat>
        <label>Legal Doc Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Docs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>